test/classes/ferguson/delete-free/owned-return-blank-arg-value.good
owned-return-blank-arg-value.chpl:10: In function 'returnByValue':
owned-return-blank-arg-value.chpl:12: error: const actual is passed to 'ref' formal 'src' of implicit copy initializer
note: to formal of type _owned(C)
